--- a/springboot_base_hello/pom.xml
+++ b/springboot_base_hello/pom.xml
@@ -12,7 +12,11 @@
 
     <groupId>com.koko</groupId>
     <artifactId>springboot_base_helloworld</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>springboot_high_springmvc</module>
+    </modules>
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -36,6 +40,28 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.3.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>6.0.6</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.koko</groupId>
+            <artifactId>springboot_high_mybatis_starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
+
+
 
 </project>
