--- a/springboot_high_springmvc/pom.xml
+++ b/springboot_high_springmvc/pom.xml
@@ -14,6 +14,10 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
@@ -21,7 +25,9 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.koko</groupId>
     <artifactId>springboot_high_springmvc</artifactId>
+    <version>1.0.1</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
