--- a/proj_blog_backend/src/main/resources/application.yaml
+++ b/proj_blog_backend/src/main/resources/application.yaml
@@ -12,6 +12,18 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
 
+#测试docker打包构建
+#spring:
+#  datasource:
+#    url: jdbc:mysql://192.168.6.100:3306/docker
+#    driverClassName: com.mysql.cj.jdbc.Driver
+#    username: root
+#    password: root
+#    type: com.zaxxer.hikari.HikariDataSource
+#  jackson:
+#    date-format: yyyy-MM-dd HH:mm:ss
+#    time-zone: GMT+8
+
 # mybatis配置：
 # 必写：mapperXML位置、resultType别名
 # 可选：自动映射、驼峰映射、日志实现
